--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Ordination Dr. Eva Eisenhofer</h1>
         <h3>Kontakt</h3>
         <p>
-            <strong>Adresse:</strong> Engerthstraße 232-238/16, 1020 Wien<br>
+            <strong>Adresse:</strong> Engerthstraße 232-238/16/3, 1020 Wien<br>
             <strong>Telefon:</strong> 01 7292819<br>
             <strong>E-Mail:</strong> evaeisenhofer@live.at
         </p>
