--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h3>Kontakt</h3>
         <p>
             <strong>Adresse:</strong> Engerthstraße 232-238/16/3, 1020 Wien<br>
-            <strong>Telefon:</strong> 01 7292819<br>
+            <strong>Telefon:</strong> +43 1 7292819<br>
             <strong>E-Mail:</strong> evaeisenhofer@live.at
         </p>
     </div>
